--- a/cronometro/styles.css
+++ b/cronometro/styles.css
@@ -1,61 +1,66 @@
+/* Define a cor de fundo do corpo da página */
 body {
     background-color: rgb(224, 224, 224);
     display: flex;
 }
 
+/* Define o estilo do timer */
 #timer {
-    justify-content: center;
-    width: 768px;
-    height: 300px;
-    margin: 30px;
+    width: 95%;
+    margin: auto;
     text-align: center;
     border: 2px solid rgba(0, 0, 0, 0.158);
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.315);
-    border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.692);
+    padding: 10px;
 }
 
+/* Define o estilo do display */
 #display {
-    font-size: 60px;
+    font-size: 80px;
     color: rgb(49, 49, 49);
-    font-weight: 1600;
     border-color: rgb(238, 233, 233);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+/* Define o estilo dos botões */
 button {
     color: white;
     cursor: pointer;
+    font-size: 17px;
     font-weight: bold;
     border: none;
     margin: 5px;
-    width: 75px;
-    height: 30px;
+    width: 100px;
+    height: 45px;
     border-radius: 7px;
     transition: 0.1s;
 }
 
+/* Define o estilo do botão de start */
 #start {
     background-color: rgb(15, 155, 15);
 }
 
+/* Define o estilo do botão de pause */
+#pause {
+    background-color: rgb(107, 107, 107);
+}
+
+/* Define o estilo do botão de clean */
+#clean {
+    background-color: rgb(172, 19, 19);
+}
+
+/* Define o estilo dos botões quando passam o mouse por cima */
 #start:hover {
     background-color: rgb(17, 196, 17);
     transform: translateY(2px);
 }
 
-#pause {
-    background-color: rgb(107, 107, 107);
-}
-
 #pause:hover {
-    background-color:  rgb(165, 165, 165);
+    background-color: rgb(165, 165, 165);
     transform: translateY(2px);
-}
-
-#clean {
-    background-color: rgb(172, 19, 19);
-    width: 85px;
 }
 
 #clean:hover {
@@ -63,9 +68,14 @@ button {
     transform: translateY(2px);
 }
 
-@media(min-width=768px) {
-    #timer_container {
-        width: 768px;
+/* Define o estilo do timer_container quando a tela tem pelo menos largura de tela de desktop (768 pixels) */
+@media (min-width = 1200px) {
+    #timer {
+        width: 1200px;
 
+    }
+    #display {
+        font-size: 170px;
+    
     }
 }
