--- a/cronometro/styles.css
+++ b/cronometro/styles.css
@@ -1,37 +1,39 @@
 /* Define a cor de fundo do corpo da página */
 body {
-    background-color: rgb(224, 224, 224);
     margin: 0;
 }
 
 /* Define o estilo do timer */
 #timer {
-    width: 100%;
+    width: 100vw;
     margin: 0 auto;
     text-align: center;
-    border: 2px solid rgba(0, 0, 0, 0.158);
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.315);
     background-color: rgba(255, 255, 255, 0.692);
-    padding: 10px;
+    justify-items: center;
 }
 
 /* Define o estilo do display */
 #display {
-    font-size: 70px;
+    margin: 5px;
+    font-size: 80px;
     color: rgb(49, 49, 49);
     border-color: rgb(238, 233, 233);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#buttons_container{
+    display: flex;
 }
 
 /* Define o estilo dos botões */
 button {
     color: white;
     cursor: pointer;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: bold;
     border: none;
     margin: 5px;
-    width: 90px;
+    width: 100vw;
     height: 35px;
     border-radius: 5px;
     transition: 0.1s;
@@ -70,13 +72,18 @@ button {
 
 /* Define o estilo do timer quando a tela tem pelo menos largura de 769 pixels */
 @media screen and (min-width: 769px) {
-    #display {
-        font-size: 130px;
+    #timer {
+       width: 769px;
     }
-    
+
+    #display {
+        font-size: 178px;
+    }
+
     button {
-        width: 175px;
-        height: 65px;
-        font-size: 35px;
+        justify-content: center;
+        width: 100%;
+        height: 55px;
+        font-size: 28px;
     }
 }
